Small bugfix in overlapping styling between components

--- a/prosjekt-2/src/pages/css/viewInfo.module.css
+++ b/prosjekt-2/src/pages/css/viewInfo.module.css
@@ -80,7 +80,7 @@ img {
     font-family: "Palatino", "URW Palladio L", serif;
 }
 
-form{
+.form{
     width:100%
 }
 
